--- a/css/section-mission.css
+++ b/css/section-mission.css
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100vh;
     min-height: 100vh;
-    padding: var(--space-for-nav) 300px 0px 300px;
+    padding: calc(var(--space-for-nav) - 20px) 300px 0px 300px;
     
     display: flex;
     flex-direction: column;
